[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holding-cell-backend"
version = "0.1.0"
description = "Backend ingest boundary for The Holding Cell."
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
